# quiz-wiz-backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django-ci.yml
Django/: asgi.py  settings.py  urls.py  views.py  wsgi.py
authentication/: views.py
common/: admin.py  models.py
common/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_request_status.py  0005_alter_invitation_status.py
company/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
company/migrations/: 0001_initial.py  0002_initial.py  0003_remove_company_invitations_and_more.py  0004_companymember.py
health_access/: apps.py  models.py  urls.py  utils.py  views.py
health_access/migrations/: 0001_initial.py  0002_userprofile_created_at_userprofile_updated_at.py
internship_backend/: asgi.py  settings.py  urls.py  wsgi.py
quizzes/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_remove_quizquestion_correct_answer_answer.py
tests/: conftest.py  old_test_db_redis.py  pytest.ini  test1_db_redis.py  test_change_role_admin.py  test_db_postgres.py  test_health_check.py  test_owner_of_company_action.py  test_test.py  test_user_of_company_action.py
users/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_userprofile_options_alter_userprofile_managers_and_more.py  (+1 more)
(+2 files in other folders)
